Sliding the insights panel when selecting an insight isn't working on mobile, fixing.

--- a/style/_panels.scss
+++ b/style/_panels.scss
@@ -13,7 +13,17 @@
   -o-transition: all 300ms ease-out;
   transition: all 300ms ease-out;
 
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
+
   &.panel-shifted{
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
     transform: translateX(-50%);
   }
 
