--- a/style/main.css
+++ b/style/main.css
@@ -886,8 +886,17 @@ select {
   -moz-transition: all 300ms ease-out;
   -ms-transition: all 300ms ease-out;
   -o-transition: all 300ms ease-out;
-  transition: all 300ms ease-out; }
+  transition: all 300ms ease-out;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0); }
   .double-panel.panel-shifted {
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
     transform: translateX(-50%); }
 
 .entry-types-dialog-wrapper {
